<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    >
    <LinearLayout
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:layout_marginRight="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="153dp"
            android:fontFamily="@font/pacifico"
            android:gravity="right|top|end"
            android:text="Apério"
            android:textColor="#fff"
            android:textSize="64dp" />

        <TextView
            android:id="@+id/let_s_disco"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="right|top|end"
            android:text="@string/let_s_disco"
            android:textSize="20dp"
            android:textColor="#fff"
            android:textAppearance="@style/let_s_disco" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="378dp"
        android:layout_height="382dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/slogan"

        android:background="#FFFFFF"
        android:elevation="4dp"

        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Username" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Password" />

    <Button
        android:id="@+id/button"
        android:layout_width="339dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/e44162"
        android:background="#E44162"
        android:text="Login"
        android:textColor="#fff"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="112dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:text="@string/forgot_pass"
        android:textSize="13dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        >
        <TextView
            android:id="@+id/new_to_aper"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="1dp"
            android:text="@string/new_to_aper"
            android:textAppearance="@style/new_to_aper"
            android:gravity="center"
            android:textSize="14dp"
            />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="1dp"
            android:text="@string/signup"
            android:textAppearance="@style/signup"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="#CE415E"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/sign_as_seller"
        android:layout_width="105dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:text="@string/signup_as_s"
        android:textAppearance="@style/signup_as_s"
        android:gravity="center"
        android:textColor="#CE415E"
        android:textSize="14dp"
        />
</LinearLayout>

    </RelativeLayout>

</RelativeLayout>

</RelativeLayout>

